[tool.pyright]
reportUnknownLambdaType = false
reportMissingTypeStubs = false
reportUnknownMemberType = false

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest~=6.2",
    "pytest-cov~=2.12",
]
[project]
name = "MyPythonPDMFun"
version = "1.0"
description = ""
authors = [
    {name = "pat laplante", email = "laplante.patrick@gmail.com"},
]
dependencies = [
    "pyramda~=0.1",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
cov = {shell = "pdm run pytest --cov=. --cov-report=xml tests"}